# template

./: .gitignore  Cargo.toml  README.md  macroforge_ts_quote
.github/workflows/: ci.yml
external_tester/: Cargo.toml
external_tester/src/: lib.rs
external_tester/tests/: comprehensive.rs
src/: builder.rs  ctxt.rs  input.rs  lib.rs  oxc_builder.rs  oxc_ret_type.rs  ret_type.rs  swc_builder.rs  swc_ret_type.rs  template.rs  test.rs
src/ast/: decl.rs  enums.rs  id.rs  lit.rs  mod.rs  module_decl.rs  pat.rs  typescript.rs
src/compiler/: codegen.rs  error_fmt.rs  integration.rs  ir.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  syntax.rs  tests.rs
src/compiler/codegen/: class.rs  error.rs  interface.rs  mod.rs  node.rs  op.rs  param.rs  pat.rs  prop.rs  signature.rs  target.rs
src/compiler/codegen/expr/: as.rs  mod.rs
src/compiler/codegen/ident/: mod.rs  with_optional.rs
src/compiler/codegen/module_item/: mod.rs
src/compiler/codegen/stmt/: mod.rs
src/compiler/codegen/type/: mod.rs
src/compiler/lexer/: consume.rs  control_block.rs  directive.rs  errors.rs  ident.rs  interpolation.rs  keyword.rs  literals.rs  mod.rs  normalize.rs  tests.rs
src/compiler/parser/: comments.rs  context.rs  directives.rs  ident.rs  interpolation.rs  mod.rs  tests.rs
src/compiler/parser/control_blocks/: mod.rs
src/compiler/parser/decl/: enum_decl.rs  function.rs  import_export.rs  interface.rs  mod.rs
src/compiler/parser/expr/: control_expr.rs  errors.rs  mod.rs  operators.rs  postfix.rs  precedence.rs  primary.rs
src/compiler/parser/helpers/: collect.rs  mod.rs  parse.rs
src/compiler/parser/stmt/: loop_stmt.rs  mod.rs  ts_try_stmt.rs
src/lib/: ctxt.rs  mod.rs  ret_type.rs
src/lib/ast/: class.rs  expr.rs  lit.rs  prop.rs  stmt.rs
src/oxc_ast/: mod.rs
src/swc_ast/: class.rs  decl.rs  enums.rs  expr.rs  id.rs  lit.rs  mod.rs  module_decl.rs  pat.rs  prop.rs  stmt.rs  typescript.rs
src/template/: classify.rs  collect.rs  comment.rs  control_flow.rs  escape.rs  interpolation.rs  mod.rs  parser.rs  placeholder.rs  spacing.rs  tag.rs  tests.rs
src/template/compile/: control_expr.rs  expr_segments.rs  ident_block.rs  mod.rs  segment_dispatch.rs  stmt_control.rs  stmt_segments.rs  ts_injection.rs
src/template/flush/: class_wrapped_path.rs  function_wrapped_path.rs  mod.rs  standard_path.rs  static.rs  stmt_run.rs  type_placeholder_path.rs
src/template/flush/helpers/: match_arms.rs
src/template/parse/: backtick_template.rs  doc_attributes.rs  ident_block_parts.rs  if_chain.rs  if_let_chain.rs  match_arms.rs  mod.rs  segments.rs  string_interpolation.rs  template.rs  ts_expr.rs  ts_module.rs  ts_module_with_source.rs  while_let_loop.rs  while_loop.rs
src/template/quote/: mod.rs
src/template/utils/: mod.rs
tests/: Cargo.toml  test-compile.sh
tests/src/: ir_declarations.rs  lib.rs
