[package]
name = "compile_time_parser_external_tester"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
macroforge_ts_quote = { path = ".." }
macroforge_ts_syn = { path = "../../macroforge_ts_syn" }
macroforge_ts = { path = "../../macroforge_ts" }
proc-macro2 = "1"
swc_core = { version = "54.0.0", default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_codegen",
  "ecma_parser",
  "ecma_quote",
  "ecma_visit",
] }
